--- a/styles.css
+++ b/styles.css
@@ -194,8 +194,10 @@ main {
   margin-left: -100%;
   margin-top: 200%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-transform: uppercase;
 }
 .inquiries__content .close {
   position: absolute;
