--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,3 @@
-/* fonts
-font-family: 'Baskervville', serif;
-font-family: 'Roboto', sans-serif; */
 /* Box sizing rules */
 *,
 *::before,
@@ -77,6 +74,8 @@ select {
   }
 }
 
+/* END RESETS */
+
 /* header section  */
 
 .intro {
@@ -88,31 +87,37 @@ select {
   justify-content: space-evenly;
   text-transform: uppercase;
   color: white;
-  background: #000000;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #000000; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to bottom,
+    #434343,
+    #000000
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #434343,
+    #000000
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-
-  animation: fadeInAnimation ease 1.5s;
+  animation: fadeInAnimation ease-in-out 1.5s;
   animation-iteration-count: 1;
-  animation-fill-mode:backwards;
-
+  animation-fill-mode: backwards;
 }
 @keyframes fadeInAnimation {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-     }
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
-.intro__title{
-    font-family: 'Merriweather', serif;
-    font-weight:900;
-    font-size: clamp(2rem, 3vw, 3rem);
+.intro__title {
+  font-family: "Merriweather", serif;
+  font-weight: 900;
+  font-size: clamp(2rem, 3vw, 3rem);
 }
 .intro__image {
-  width: clamp(300px, 40%, 500px);
+  width: clamp(200px, 30%, 400px);
   border-radius: 50%;
   box-shadow: 0 0 50px #ccc;
 }
@@ -124,62 +129,61 @@ background: linear-gradient(to bottom, #434343, #000000); /* W3C, IE 10+/ Edge, 
 /* main */
 
 main {
-    display: grid;
-    place-items: center;
+  display: grid;
+  place-items: center;
   margin: auto;
   height: 100vh;
   background: black;
 }
 .navigation {
   display: grid;
-  grid-auto-flow: row;
+  grid-template-columns: 1fr 1fr 1fr;
   width: 80%;
   margin: auto;
   gap: clamp(1rem, 1.5vw, 2rem);
-  grid-template-columns: 1fr 1fr;
   text-align: center;
   padding-top: 100px;
 }
 .mission__text {
-  grid-column: 1 / 3;
-  background: lightgray;
+  grid-column: 1 / -1;
+  color: white;
   font-size: clamp(1rem, 1.5vw, 2rem);
-  border-radius: 20px;
   padding: 1rem;
 }
 
 .card {
   display: flex;
+  grid-column: span 1;
   justify-content: center;
   align-items: center;
-  background: lightgray;
+  background: black;
+  color: white;
   cursor: pointer;
-  border-radius: 20px;
-  height: 200px;
-  font-size: clamp(1.5rem, 2vw, 4rem);
+  font-size: clamp(1rem, 2vw, 4rem);
   text-transform: uppercase;
+  padding: clamp(1rem, 1.5vw, 2rem);
+  transition: 0.25s;
+  border: 2px solid white;
 }
 
-.card:hover {
-    box-shadow: 0 0 50px #ccc;
-    background: black;
-    color: white;
+.card:hover,
+.card:focus {
+  box-shadow: none;
+  background: white;
+  color: #000000;
+  box-shadow: 0 0 50px #ccc;
+  transform: scale(1.1);
 }
 
 @media only screen and (max-width: 768px) {
-    .inquiries{
-        grid-column: 1 / 3;
-    }
-    .services{
-        grid-column: 1 / 3;
-    }
-   
+  .card {
+    grid-column: 1 / -1;
   }
-
+}
 
 /* overlay content */
 
-.inquiries__content {
+.overlay {
   height: 100%;
   width: 100%;
   position: fixed;
@@ -199,33 +203,10 @@ main {
   align-items: center;
   text-transform: uppercase;
 }
-.inquiries__content .close {
-  position: absolute;
-  top: 25px;
-  Right: 25px;
-  font-size: 35px;
-  z-index: 20;
-  cursor: pointer;
+.show {
+  margin: 0;
 }
-.services__content {
-  height: 100%;
-  width: 100%;
-  position: fixed;
-  z-index: 6;
-  top: 0;
-  left: 0;
-  background-color: lightgray;
-  overflow-x: hidden;
-  -webkit-transition: 0.5s ease-out;
-  transition: 0.5s ease-out;
-  color: #000000;
-  margin-left: 200%;
-  margin-top: 200%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.services__content .close {
+.close {
   position: absolute;
   top: 25px;
   right: 25px;
@@ -233,9 +214,3 @@ main {
   z-index: 20;
   cursor: pointer;
 }
-
-.show {
-  margin: 0;
-}
-
-
